# bevy-chess

./: Cargo.toml  README.md
src/: board.rs  history.rs  main.rs  movement.rs  pieces.rs  ui.rs
src/board/: components.rs  creation.rs  events.rs  history.rs  movement.rs  promotion.rs  resources.rs  selection.rs  status.rs  systems.rs
src/board/systems/: movement.rs
src/pieces/: components.rs  resources.rs  systems.rs
src/pieces/systems/: creation.rs  movement.rs
