[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
# until update for bevy 0.10 is released, point to the migration branch
bevy_mod_picking = "0.12.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
